--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -2,7 +2,7 @@
     <require from='./photos.css'></require>
     <section class="container content-area photos" css="height: ${win_height-266}px;">
         <div class="row content-area" style="height:380px;width:100%;margin-bottom:24px;margin-top:20px;padding-right:24px;" dir="rtl">
-            <div class="row">
+            <div class="row" style="margin-right:0;margin-left:0;">
                 <div class="col-md-1 hide-if-small" css="padding-top: 40px;position:relative">
                     <span css="position:absolute"></help>${'photos.more' & t}<help topic="photos.slider" position="right"></span>
                     <input type="range" id="range" min="4" max="32" step="1" change.trigger="slider_changed()" value.bind="photos_per_line" />
