--- a/src/stories/story-detail.html
+++ b/src/stories/story-detail.html
@@ -13,7 +13,7 @@
                 class="word-highlighter ${highlight_on}" click.trigger="toggle_highlight_on()" t="[title]stories.highlight-on">
             </button>
         </div>
-        <div class="row" css="direction:${story_dir};">
+        <div class="row" css="direction:${story_dir};margin-left:-30px;">
             <div class="col-md-5">
                 <photo-strip if.bind="has_associated_photos" source.bind="source" height.bind="220" action_key="Zoom2" style="padding:0;"
                     dir="ltr" settings.bind="{arrows:true, height:220}"></photo-strip>
