--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -17,7 +17,7 @@
                 settings.bind="{arrows:true, height:220}">
             </photo-strip>
         </div>
-        <div class="container" css="padding-right:58px;height:${panel_height}px" ref="member_detail_panel">
+        <div class="container" css="margin-right:-32px;height:${panel_height}px" ref="member_detail_panel">
             <div id="member-detail-content" class="row" dir="rtl" ref="top_panel">
                 <div class="col-md-6">
                     <h3 if.bind="member.family_connections.hasFamilyConnections">${'members.family-connections' & t}</h3>
