--- a/src/terms/terms.html
+++ b/src/terms/terms.html
@@ -15,25 +15,27 @@
                         </div>
                         <div class="col-md-1 col-md-offset-5" if.bind="!user.editing"></div>
                         <div class="col-md-6">
-                            <div class="input-group" style="width:90%;margin-top:15px;margin-right:35px;">
+                            <div class="input-group" style="width:100%;margin-top:15px;">
                                 <search-input value.bind="filter" change.delegate="update_story_list()" placeholder="terms.filter" height="38"></search-input>
                             </div>
                         </div>
                     </div>
-                    <ul style="width:100%;padding:0;float:right;height:597px;overflow:auto;list-style-type: none;padding-left:20px;" ref="scroll_area">
-                        <li repeat.for="term of term_list | filter: filter : 'name' : 'author'" 
-                            dir="rtl" style="float:right;border-bottom:2px solid lightgray;padding-bottom:20px;position:relative;width:100%;cursor:pointer;" 
-                                click.delegate="jump_to_the_full_story($event, term)">
-                            <div style="height:120px;overflow:hidden;padding:20px;position:relative;" class="story-preview">
-                                <div style="margin-bottom: 10px;padding-right:0px;">
-                                    <editable settings.bind="{show_date:false, class:'story-section', no_expand: true, deletable: true}" 
-                                        story.bind="term" 
-                                        change.delegate="handle_event(term, $event)"></editable>
+                    <div class="row">
+                        <ul style="width:100%;padding:0;float:right;height:597px;overflow:auto;list-style-type: none;padding-left:20px;" ref="scroll_area">
+                            <li repeat.for="term of term_list | filter: filter : 'name' : 'author'" 
+                                dir="rtl" style="float:right;border-bottom:2px solid lightgray;padding-bottom:20px;position:relative;width:100%;cursor:pointer;" 
+                                    click.delegate="jump_to_the_full_story($event, term)">
+                                <div style="height:120px;overflow:hidden;padding:20px;position:relative;" class="story-preview">
+                                    <div style="margin-bottom: 10px;padding-right:0px;">
+                                        <editable settings.bind="{show_date:false, class:'story-section', no_expand: true, deletable: true}" 
+                                            story.bind="term" 
+                                            change.delegate="handle_event(term, $event)"></editable>
+                                    </div>
+                                    <!--<a style="position:absolute;top:20px;left:10px;cursor:pointer;" click.delegate="jump_to_the_full_story($event, term)">${'stories.to-the-full-story' & t}...</a>-->
                                 </div>
-                                <!--<a style="position:absolute;top:20px;left:10px;cursor:pointer;" click.delegate="jump_to_the_full_story($event, term)">${'stories.to-the-full-story' & t}...</a>-->
-                            </div>
-                        </li>
-                    </ul>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
 
                 <div class="col-md-3">
