--- a/src/photos/full-size-photo.html
+++ b/src/photos/full-size-photo.html
@@ -21,7 +21,7 @@
                 aubs-tooltip="text.bind:face.name">
                 <span style="position:relative">
                     <span class="highlighted-face" if.bind="highlighting" innerhtml.bind="face.name" 
-                        css="background-color:white;color:black;opacity:1.0;position:absolute;top:${face.r}px;left:${-face.r}px;width:${2*face.r}px;font-size:70%;"
+                        css="top:${face.r}px;left:${-face.r}px;width:${2*face.r}px;"
                     </span>
                 </span>
             </button>
