--- a/src/resources/elements/editable.html
+++ b/src/resources/elements/editable.html
@@ -2,7 +2,7 @@
     <require from="./editable.css"></require>
 
     <div css="margin-top:0px;margin-right:0;margin-left:0;padding:0;width:${width}" class="${settings.divclass}">
-        <div>
+        <div class="preview-header">
             <span show.bind="story.name || user.privileges.EDITOR" dir="rtl" style="padding:0;margin:0;float:right;">
                 <!--<i if.bind="!settings.no_expand" class="fa fa-sm fa-expand is-link" t="[title]stories.zoom" click.trigger="zoom_out(story, 'show')">&nbsp;&nbsp;</i>-->
                 <i if.bind="user.privileges.EDITOR && user.editing" class="far fa-sm fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story, 'edit')">&nbsp;</i>
