--- a/src/app.html
+++ b/src/app.html
@@ -26,7 +26,7 @@
                         <input type="text" class="search-box-input" value.bind="keywords" t="[placeholder]enter-search-words" keydown.delegate="go_search() & debounce:1500" />
                         <i class="far fa-times" click.trigger="clear_keywords()"></i>
                     </label>
-                    <button class="search-box-button" click.delegate="go_search(true)">
+                    <button class="search-box-button" click.delegate="go_search(true)" if.bind="false">
                         <i class="far fa-search"></i>
                     </button>
                 </div>
