matters of style

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 </head>
 
 <body aurelia-app="main">
+    <script src="window.location.reload()"></script>
     <script src="scripts/vendor-bundle.js" data-main="aurelia-bootstrapper"></script>
 </body>
 
