--- a/src/app.html
+++ b/src/app.html
@@ -31,7 +31,7 @@
                     </button>
                 </div>
             </div>
-            <div class="navbar-controls" style="margin-left:10px;margin-right:10px;">
+            <div class="navbar-controls" >
                 <user-mode></user-mode>
             </div>
         </nav>
