--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -1,6 +1,6 @@
 <template>
     <require from="./members.css"></require>
-    <div id="member-detail" class="container" style="height:774px;" ref="member_detail_container">
+    <div id="member-detail" class="content-area" style="padding-left:15px;padding-right:19px;" ref="member_detail_container">
         <div class="row" ref="member_header">
             <div id="breadcrumb" class="col-xs-12 font-size-150 detail-header" dir="${theme.rtltr}">
                 <i class="far fa-share pull-left" data-role="button" t="[title]go-back" click.trigger="go_back()"></i>
