--- a/src/resources/elements/editable.html
+++ b/src/resources/elements/editable.html
@@ -1,22 +1,23 @@
 <template>
     <require from="./editable.css"></require>
 
-    <div css="margin-top:0px;margin-right:0;margin-left:0;padding:0;width:${width}" class="${settings.divclass}">
+    <div css="width:${width}" class="${settings.divclass} editable-box">
         <div class="preview-header">
-            <span show.bind="story.name || user.privileges.EDITOR" dir="rtl" style="padding:0;margin:0;float:right;">
+            <span show.bind="story.name || user.privileges.EDITOR" dir="${theme.rtltr}" style="padding:0;margin:0;">
                 <!--<i if.bind="!settings.no_expand" class="fa fa-sm fa-expand is-link" t="[title]stories.zoom" click.trigger="zoom_out(story, 'show')">&nbsp;&nbsp;</i>-->
                 <i if.bind="user.privileges.EDITOR && user.editing" class="far fa-sm fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story, 'edit')">&nbsp;</i>
                 <i if.bind="settings.deletable && user.privileges.ADMIN && user.editing" class="far fa-sm fa-trash-alt is-link" t="[title]stories.delete" click.trigger="delete_story(story)">&nbsp;</i>
                 <i if.bind="settings.checkable && user.editing" class="fa${story.checked ? '' : 'r'} fa-circle fa-sm is-link" t="[title]stories.checking" click.trigger="toggle_checked()">&nbsp;</i>
-            <span if.bind="settings.show_date &&story.timestamp">${story.timestamp} | </span>
-            <span if.bind="story.author">${story.author}:&nbsp;</span>
-            <span if.bind="! story.author">${'stories.unknown-source' & t}:&nbsp;</span>
+            </span>
+            <span if.bind="settings.show_date &&story.timestamp">${story.timestamp | formatdate} |&nbsp;</span>
+            <span if.bind="settings.show_author && story.author">${story.author}:&nbsp;</span>
+            <span if.bind="settings.show_author && ! story.author">${'stories.unknown-source' & t}:&nbsp;</span>
+            <div class="checkable ${story.checked ? 'selected' : ''}"><strong innerhtml.bind="story.name"></strong></div>
+            <span if.bind="user.privileges.EDITOR && user.editing && story.updater.name"> ${updated_by}: ${story.updater.name} @${story.timestamp}</span>
         </div>
-        <div class="checkable ${story.checked ? 'selected' : ''}"><strong innerhtml.bind="story.name" ></strong></div>
-        <span if.bind="user.privileges.EDITOR && user.editing && story.updater.name"> ${updated_by}: ${story.updater.name} @${story.timestamp}</span>
 
-        <div class="fr-view ${settings.class}">
-            <p class="${theme.font_size}" innerhtml.bind="story.story_preview" css="float:right;direction:rtl;text-align:justify;" >
+        <div class="fr-view ${settings.class} message-body">
+            <p class="${theme.font_size}" innerhtml.bind="story.story_preview" css="direction:${theme.rtltr};text-align:justify;">
             </p>
         </div>
     </div>
