--- a/src/admin/access-manager.html
+++ b/src/admin/access-manager.html
@@ -1,6 +1,6 @@
 <template>
     <require from="./admin.css"></require>
-    <div style="height:100%;margin-top:-30px;">
+    <div style="height:100%;margin-top:-30px;direction:ltr" dir="ltr">
         <div style="width:400px;margin-left:auto;margin-right:auto">
             <h3 class="center">Access Manager</h3>
         </div>
