--- a/src/admin/adhoc-scripts.html
+++ b/src/admin/adhoc-scripts.html
@@ -1,5 +1,5 @@
 <template>
-    <div class="row" style="padding:15px;width:1800px;margin-left:auto;margin-right:auto;">
+    <div class="row" style="padding:15px;width:1800px;margin-left:auto;margin-right:auto;" dir="ltr">
         <div class="col-md-5" style="margin-right:-52px">
             <h2 class="center">Script</h2>
             <div class="row toolbar">
