--- a/src/admin/show-logs.html
+++ b/src/admin/show-logs.html
@@ -1,5 +1,5 @@
 <template>
-    <div class="row" style="padding:5px;height:750px;width:1500px;margin-left:auto;margin-right:auto;">
+    <div class="row" style="padding:5px;height:750px;width:1500px;margin-left:auto;margin-right:auto;" dir="ltr">
         <div class="col-sm-3" style="height:100%;">
             <h3 class="center">Log Files</h3>
             <table class="table table-striped" aurelia-table="data.bind: log_files; display-data.bind: $displayData; 
