work around router isNavigating issue

--- a/src/user/user-mode.html
+++ b/src/user/user-mode.html
@@ -55,7 +55,7 @@
                 </a>
             </li>
             <li>
-                <a class="dropdown-item" href="#" click.trigger="toggle_logo()" style="float:${theme.same_dir}">
+                <a class="dropdown-item" href="#" click.trigger="toggle_logo()" css="float:${theme.same_dir}">
                     <img if.bind="! theme.blue_logo" src="${theme.files.gb_logo_blue}" width="20" />
                     <img if.bind="theme.blue_logo" src="${theme.files.gb_logo_png}" width="20" />
                 </a>
