--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -29,14 +29,14 @@
                                     <ul class="family">
                                         <li>
                                             <a type="button" class="btn btn-default ${disabled_if}" if.bind="member.family_connections.parents && member.family_connections.parents.pa"
-                                                route-href="route: member-details; params.bind: {id:member.family_connections.parents.pa.id}" style="float:right;">
+                                                route-href="route: member-details; params.bind: {id:member.family_connections.parents.pa.id, keywords: ''}" style="float:right;">
                                                 <img src.bind="get_profile_photo(member.family_connections.parents.pa)" />
                                                 <span>
                                                     ${member.family_connections.parents.pa.name}
                                                 </span>
                                             </a>
                                             <a type="button" class="btn btn-default ${disabled_if}" if.bind="member.family_connections.parents && member.family_connections.parents.ma"
-                                                route-href="route: member-details; params.bind: {id:member.family_connections.parents.ma.id}" style="float:right;">
+                                                route-href="route: member-details; params.bind: {id:member.family_connections.parents.ma.id, keywords: ''}" style="float:right;">
                                                 <img src.bind="get_profile_photo(member.family_connections.parents.ma)" />
                                                 <span>
                                                     ${member.family_connections.parents.ma.name}
@@ -52,7 +52,8 @@
                                     <ul class="family">
                                         <li>
                                             <a type="button" class="btn btn-default ${disabled_if}"
-                                                repeat.for="sibling of member.family_connections.siblings" route-href="route: member-details; params.bind: {id:sibling.id}">
+                                                repeat.for="sibling of member.family_connections.siblings" 
+                                                    route-href="route: member-details; params.bind: {id:sibling.id, keywords: ''}">
                                                 <img src.bind="get_profile_photo(sibling)" />
                                                 <span>
                                                     ${sibling.name}
@@ -67,7 +68,8 @@
                                 <td>
                                     <ul class="family">
                                         <li>
-                                            <a type="button" class="btn btn-default ${disabled_if}" repeat.for="spouse of member.family_connections.spouses" route-href="route: member-details; params.bind: {id:spouse.id}">
+                                            <a type="button" class="btn btn-default ${disabled_if}" repeat.for="spouse of member.family_connections.spouses" 
+                                                route-href="route: member-details; params.bind: {id:spouse.id, keywords: ''}">
                                                 <img src.bind="get_profile_photo(spouse)" />
                                                 <span>
                                                     ${spouse.name}
@@ -82,7 +84,8 @@
                                 <td>
                                     <ul class="family">
                                         <li>
-                                            <a type="button" class="btn btn-default ${disabled_if}" repeat.for="child of member.family_connections.children" route-href="route: member-details; params.bind: {id:child.id}">
+                                            <a type="button" class="btn btn-default ${disabled_if}" repeat.for="child of member.family_connections.children" 
+                                                route-href="route: member-details; params.bind: {id:child.id, keywords: ''}">
                                                 <img src.bind="get_profile_photo(child)" />
                                                 <span>
                                                     ${child.name}
