small excercise in responsiveness

--- a/src/photos/photo-detail.html
+++ b/src/photos/photo-detail.html
@@ -1,7 +1,7 @@
 <template>
     <require from="./photos.css"></require>
 
-    <div style="width:1170px;margin-left:auto;margin-right:auto;min-height:755px;" class="content-area photo-detail">
+    <div class="content-area photo-detail">
         <div class="detail-header"> 
             <h3 style="float:left;cursor:pointer;padding:0;margin:0;">
                 <i class="far fa-share" t="[title]go-back" click.trigger="go_back()"></i>
