--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+    <meta http-equiv="expires" content="0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
     <title>סִפּוּרֵי גִּבְעַת בְּרֶנֶר</title>
