--- a/src/user/user-mode.html
+++ b/src/user/user-mode.html
@@ -72,7 +72,7 @@
         <i class="far fa-lg fa-comments"></i>
     </a>
 
-    <a href click.delegate="share()" t="[title]user.share" class="border-right">
+    <a if.bind="false" href click.delegate="share()" t="[title]user.share" class="border-right">
         <i class="far fa-link"></i>
     </a>
 
