member page css

--- a/src/stories/story-detail.html
+++ b/src/stories/story-detail.html
@@ -62,7 +62,7 @@
             <div class="col-md-7 justified-story full-story">
                 <div class="row" style="padding-top:8px;">
                     <div class="col-md-4 col-md-offset-8" if.bind="story.source">
-                        <span css="float:right;direction:${story_dir}">${story.source}:</span>
+                        <span css="float:${theme.same_dir};direction:${story_dir};padding-right:12px;padding-left:12px;">${story.source}:</span>
                     </div>
                 </div>
                 <div class="row" style="padding-right:15px;padding-top:8pxl;">
