--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -18,7 +18,7 @@
         </div>
         <div class="container" css="margin-right:-32px;height:${panel_height}px" ref="member_detail_panel">
             <div id="member-detail-content" class="row" dir="rtl" ref="top_panel">
-                <div class="col-md-6">
+                <div class="col-md-6 col-sm-12">
                     <h3 if.bind="member.family_connections.hasFamilyConnections">${'members.family-connections' & t}</h3>
                     <div class="family-chains" style="overflow:auto;" ref="family_connections_panel">
                         <table class="noborder">
@@ -102,7 +102,7 @@
                         <compose view-model="./member-edit" model.bind="member"></compose>
                     </div>
                 </div>
-                <div class="col-md-6 fr-view" style="margin-bottom:20px;padding-left:20px;padding-bottom:10px;" ref="life_summary_box"
+                <div class="col-md-6 col-sm-12 fr-view life-summary" style="margin-bottom:20px;padding-left:20px;padding-bottom:10px;" ref="life_summary_box"
                         if.bind="(user.privileges.EDITOR || story_0.story_text != '') && ! user.editing">
                     <h4 style="margin-top:16px;margin-bottom:0px;color:gray;">
                         ${'members.life-summary' & t} ${member.member_info.first_name}
@@ -141,9 +141,9 @@
             <!--member stories panel-->
             <div id="stories" class="fr-view row ${theme.font-size}" ref="bottom_panel"
                 show.bind="! (user.editing || life_summary_expanded)"
-                css="min-height:270px;margin-left:-31px;margin-right:0px;height:${bottom_height}px;"
+                css="margin-left:-28px;margin-right:0px;height:${bottom_height}px;"
                 interact-draggable.bind="theme.interact_setting" interact-dragend.delegate="shift_stories($event)" dir="rtl">
-                <div class="col-md-3 col-sm-6 col-xs-12 story-box last notfirst" css="float:${theme.same_dir};height:${story_box_height}px;" click.trigger="goto_story_page(story_4)">
+                <div class="col-lg-3 visible-lg hidden-md story-box" css="float:${theme.same_dir};height:${story_box_height}px;" click.trigger="goto_story_page(story_4)">
                     <div class="member-story-header" show.bind="story_4.story_text != ''" aubs-tooltip="text.bind:to_story_page">
                         <h4 dir="rtl">
                             <!--<i if.bind="user.privileges.EDITOR" class="far fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_4, 'edit')">&nbsp;</i>-->
@@ -156,7 +156,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-6 hidden-xs story-box notfirst" css="float:${theme.same_dir};height:${story_box_height}px;" click.trigger="goto_story_page(story_3)">
+                <div class="col-lg-3 col-md-4 visible-lg visible-md story-box" css="float:${theme.same_dir};height:${story_box_height}px;" click.trigger="goto_story_page(story_3)">
                     <div class="member-story-header" show.bind="story_3.story_text != ''" aubs-tooltip="text.bind:to_story_page" >
                         <h4 dir="rtl">
                             <!--<i if.bind="user.privileges.EDITOR" class="far fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_3, 'edit')">&nbsp;</i>-->
@@ -169,7 +169,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-6 hidden-xs story-box notfirst" css="float:${theme.same_dir};height:${story_box_height}px;" click.trigger="goto_story_page(story_2)">
+                <div class="col-lg-3 col-md-4 visible-lg visible-md story-box" css="float:${theme.same_dir};height:${story_box_height}px;" click.trigger="goto_story_page(story_2)">
                     <div class="member-story-header" show.bind="story_2.story_text != ''" aubs-tooltip="text.bind:to_story_page" >
                         <h4 dir="rtl">
                             <!--<i if.bind="user.privileges.EDITOR" class="far fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_2, 'edit')">&nbsp;</i>-->
@@ -182,7 +182,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-6 hidden-xs story-box" css="float:${theme.same_dir};height:${story_box_height}px;padding-right:8px;" click.trigger="goto_story_page(story_1)">
+                <div class="col-lg-3 col-md-4 col-sm-12 col-xs-12 story-box" css="float:${theme.same_dir};height:${story_box_height}px;padding-right:8px;" click.trigger="goto_story_page(story_1)">
                     <div class="member-story-header" show.bind="story_1.story_text != ''" aubs-tooltip="text.bind:to_story_page" >
                         <h4 dir="rtl">
                             <!--<i if.bind="user.privileges.EDITOR" class="far fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_1, 'edit')">&nbsp;</i>-->
