separate desktop and mobile members

--- a/src/members/members.html
+++ b/src/members/members.html
@@ -4,7 +4,7 @@
         <div>
             <div class="row">
                 <div class="col-md-10 col-md-offset-2" style="padding-right:50px;">
-                    <form class="form-inline" style="padding-top:16px;direction:rtl;">
+                    <div class="inputs-inline" >
                         <div class="input-group" style="padding-top:16px;width:50%;font-size:18px;">
                             <search-input value.bind="filter" placeholder="members.filter" height="38"></search-input>
                         </div>
@@ -40,7 +40,7 @@
                         <div class="input-group" style="padding-top:16px;" if.bind="relatives_mode">
                             <help topic="family-connections" position="bottom"></help>
 `                        </div>
-                    </form>
+                    </div>
                 </div>
             </div>
 
