first member story was not aligned if no life summary

--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -103,6 +103,9 @@
                     </div>
                 </div>
                 <div class="col-md-6 col-sm-12 fr-view life-summary" style="margin-bottom:20px;padding-left:20px;padding-bottom:10px;" ref="life_summary_box"
+                    if.bind="story_0.story_text == '' && ! user.privileges.EDITOR">
+                </div>
+                <div class="col-md-6 col-sm-12 fr-view life-summary" style="margin-bottom:20px;padding-left:20px;padding-bottom:10px;" ref="life_summary_box"
                         if.bind="(user.privileges.EDITOR || story_0.story_text != '') && ! user.editing">
                     <h4 style="margin-top:16px;margin-bottom:0px;color:gray;">
                         ${'members.life-summary' & t} ${member.member_info.first_name}
