--- a/src/user/feedback.html
+++ b/src/user/feedback.html
@@ -29,8 +29,10 @@
             </div>
         </ux-dialog-body>
         <ux-dialog-footer style="padding-right:32px;">
-            <button class="btn btn-danger btn-warning" click.trigger="cancel()" disable="params.feedback_bad_message=='' && params.feedback_good_message==''">${'stories.cancel' & t}</button>
-            <button class="btn btn-success btn-primary" click.trigger="send()">${'promote-send' & t}</button>
+            <button class="btn btn-danger btn-warning" click.trigger="cancel()">${'stories.cancel' & t}</button>
+            <button class="btn btn-success btn-primary" click.trigger="send()" disabled.bind="is_disabled" >
+                ${'promote-send' & t}
+            </button>
         </ux-dialog-footer>
     </ux-dialog>
 </template>
