--- a/src/app.html
+++ b/src/app.html
@@ -48,7 +48,7 @@
             <div class="footer-area">
                 <span class="footer-item"><a click.delegate="contact_us()">Built by Lifestone</a></span>
                 <span class="footer-item">${curr_version}</span>
-                <span class="footer-item"><a click.delegate="feedback()">${'feedback' & t}</a></span>
+                <span class="footer-item"><a click.delegate="feedback()">${'feedback.feedback' & t}</a></span>
             </div>
         </footer>
     </div>
