--- a/src/user/feedback.html
+++ b/src/user/feedback.html
@@ -1,6 +1,6 @@
 <template>
     <require="./promote.css"></require>
-        <ux-dialog css="direction:${theme.rtltr};width:500px;">
+        <ux-dialog css="direction:${theme.rtltr};width:45em;">
             <ux-dialog-header style="padding-right:32px;">
                 <h4 class="panel-title" innerhtml.bind="header_text & t"></h4>
             </ux-dialog-header>
@@ -15,7 +15,9 @@
                                 </select>
                             </div>
                             <div class="input-group">
-                                <input type="text" value.bind="params.device_details" style="height:32px;padding-right:5px;padding-left:5px;width:320px;" t="[placeholder]feedback.device-details"/>
+                                <input type="text" value.bind="params.device_details" 
+                                    disabled.bind="params.device_type=='any-device'"
+                                    style="height:32px;padding-right:5px;padding-left:5px;width:450px;" t="[placeholder]feedback.device-details"/>
                             </div>
                         </div>
                         <div class="form-group">
