--- a/src/user/feedback.html
+++ b/src/user/feedback.html
@@ -17,7 +17,8 @@
                             <div class="input-group">
                                 <input type="text" value.bind="params.device_details" 
                                     disabled.bind="params.device_type=='any-device'"
-                                    style="height:32px;padding-right:5px;padding-left:5px;width:450px;" t="[placeholder]feedback.device-details"/>
+                                    style="height:32px;padding-right:5px;padding-left:5px;width:420px;" 
+                                    t="[placeholder]feedback.device-details"/>
                             </div>
                         </div>
                         <div class="form-group">
