--- a/src/members/members.html
+++ b/src/members/members.html
@@ -20,7 +20,7 @@
                             </select>
                         </div>
                         <div class="input-group" style="padding-top:16px;" if.bind="! relatives_mode">
-                            <help topic="members" position="bottom"></help>
+                            <help topic.bind="topic_members" position="bottom"></help>
                         </div>
                         <div if.bind="user.editing && ! caller_type" class="input-group" style="padding-top:16px;">
                             <a route-href="route: member-details; params.bind: {id:'new'}" class="btn btn-success cl-create-btn">
