--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -4,7 +4,7 @@
             <div id="breadcrumb" class="col-xs-12 font-size-150 detail-header" dir="${theme.rtltr}">
                 <i class="far fa-share pull-left" style="cursor:pointer;" data-role="button" t="[title]go-back" click.trigger="go_back()"></i>
                 <span if.bind="member.member_info.id">${member_display_name}</span>
-                <span if.bind="! member.member_info.id">${'members.new-member' & t }</span>
+                <span if.bind="! member.member_info.id">${new_member}</span>
                 <span style="color:white;font-size:85%;margin-right:30px;"> ${life_cycle_text} </span>
             </div>
         </div>
