--- a/src/app.html
+++ b/src/app.html
@@ -47,7 +47,7 @@
         <footer id="footer" if.bind="! theme.hide_title">
             <div class="footer-area" style="font-size:120%;font-weight:bold;">
                 <span class="footer-item"><button class="btn btn-default footer-button" click.delegate="contact_us()">Built by Lifestone</button></span>
-                <span class="footer-item">${curr_version}</span>
+                <span style="direction:ltr" class="footer-item">${curr_version}</span>
                 <span class="footer-item"><button class="btn btn-default footer-button" click.delegate="feedback()">${'feedback.feedback' & t}</button></span>
             </div>
         </footer>
